--- a/public/html/qualifications/education.html
+++ b/public/html/qualifications/education.html
@@ -35,11 +35,11 @@
         <div>
           <ul>
             <p class="align-left analog-font text-lg">Class Timeline</p>
-            <a class="w-full mb-2 sm:mb-0 group relative inline-block text-lg font-medium text-zinc-200 focus:outline-none focus:ring active:text-indigo-500" onclick="openPopup('Colorado Mountain College Transcript', './public/html/timelines/cmc.html')">
+            <a class="w-full mb-2 sm:mb-0 group relative inline-block text-lg font-medium text-zinc-200 focus:outline-none focus:ring active:text-indigo-500" onclick="openPopup('CMC Transcript', './public/html/timelines/cmc.html')">
               <span class="absolute inset-0 translate-x-0.5 translate-y-0.5 bg-zinc-200 transition-transform group-hover:translate-x-0 group-hover:translate-y-0"></span>
-              <span class="relative w-full block border border-current bg-zinc-900 group-hover:bg-zinc-800 p-2 px-5 align-center"><p class="analog-font">Colorado Mountain College Transcript</p></span>
+              <span class="relative w-full block border border-current bg-zinc-900 group-hover:bg-zinc-800 p-2 px-5 align-center"><p class="analog-font">CMC Transcript</p></span>
             </a>
-            <p class="align-left text-base text-gray-600">Credits transfered to Colorado School of Mines.</p>
+            <p class="align-left text-base text-gray-600">Credits transfered to Mines.</p>
           </ul>
         </div>
       </div>
