added icon folder

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Replace the title name -->
     <title>Rex Kaeser</title>
-
+    <link rel="icon" type="image/x-icon" href="/public/images/favicon.ico">
 </head>
 <body style="font-family: 'Barlow', sans-serif" class="bg-gradient-to-r from-slate-900 via-gray-800 to-zinc-900 bg-slate-900 text-white">
   
