Changed from fully analog to modern fonts

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
+    <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet">
     <!-- You can add your own fonts from fonts.google.com -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
@@ -47,19 +47,19 @@
 <body style="font-family: 'Barlow', sans-serif" class="bg-gradient-to-r from-slate-900 via-gray-800 to-zinc-900 bg-slate-900 text-white">
   
 
-  <div class="flex  justify-center
+  <div class="flex justify-center
   snap-y scroll-auto snap-mandatory snap-always overflow-y-scroll no-scrollbar">
     <div class="h-dvh mx-5 w-full xl:w-2/3  2xl:w-1/2 items-left place-content-center flex justify-center inline-block align-middle flex-col text-3xl text-gray-200">
       <div class="max-h-dvh ">
         <div class="snap-center max-h-dvh overflow-y-scroll overflow-x-clip no-scrollbar">
-          <a class="mt-6 sm:mt-12 lg:mt-24 w-full group relative inline-block text-3xl font-medium text-zinc-200 focus:outline-none focus:ring active:text-indigo-500" onclick="toMenu()">
-            <span class="absolute inset-0 translate-x-0.5 translate-y-0.5 bg-zinc-200 transition-transform group-hover:translate-x-0 group-hover:translate-y-0"></span>
-            <span class="relative w-full block border border-current bg-zinc-900 group-hover:bg-zinc-800 p-2 px-5 align-center">
+          <a class="mt-6 sm:mt-12 lg:mt-24 w-full group relative inline-block text-3xl font-medium text-zinc-200 focus:outline-none focus:ring active:text-indigo-500 analog-corners" onclick="toMenu()">
+            <span class="absolute inset-0 translate-x-0.5 translate-y-0.5 bg-zinc-200 transition-transform group-hover:translate-x-0 group-hover:translate-y-0 analog-corners"></span>
+            <span class="relative w-full block border border-current bg-zinc-900 group-hover:bg-zinc-800 p-2 px-5 align-center analog-corners">
               <p class="analog-font">Rex Kaeser</p>
             </span>
           </a>
           <div class="pt-6 pb-0 sm:pt-8 sm:pb-2">
-          <h1 class="text-4xl h-12">> About Me</h1>
+          <h1 class="text-4xl h-12 header-font">> About Me</h1>
             <div class="grid grid-cols-1 grid-rows-3 sm:grid-cols-3 sm:grid-rows-1 grid-flow-col gap-y-1 gap-x-4 pb-4">
               <div>
                 <ul>
@@ -114,24 +114,24 @@
               <div class="h-full grow-0">
                 <ul class="h-full">
                   <a class="w-max h-full group relative inline-block text-lg font-medium text-zinc-200 focus:outline-none focus:ring active:text-indigo-500" onclick="qualPrev()">
-                      <span class="absolute h-full inset-0 translate-x-0.5 translate-y-0.5 bg-zinc-200 transition-transform group-hover:translate-x-0 group-hover:translate-y-0"></span>
-                      <span class="relative h-full w-full block border border-current bg-zinc-900 group-hover:bg-zinc-800 p-2 px-5 align-center"><p class="h-full analog-font text-center">&lt;</p></span>
+                      <span class="analog-corners absolute h-full inset-0 translate-x-0.5 translate-y-0.5 bg-zinc-200 transition-transform group-hover:translate-x-0 group-hover:translate-y-0"></span>
+                      <span class="analog-corners relative h-full w-full block border border-current bg-zinc-900 group-hover:bg-zinc-800 p-2 px-5 align-center"><p class="h-full analog-font text-center">&lt;</p></span>
                     </a> 
                 </ul>
               </div>
               <div class="grow h-full">
                 <ul class="h-full w-full">
                   <a class="w-full h-full group relative inline-block text-lg font-medium text-zinc-200 focus:outline-none focus:ring active:text-indigo-500" onclick="qualNext()">
-                      <span class="absolute inset-0 translate-x-0.5 translate-y-0.5 bg-zinc-200 transition-transform group-hover:translate-x-0 group-hover:translate-y-0"></span>
-                      <span class="relative block border border-current bg-zinc-900 group-hover:bg-zinc-800 p-2 px-5 align-center"><p id="qualifications-title" class="h-min analog-font text-center">&gt;</p></span>
+                      <span class="analog-corners absolute inset-0 translate-x-0.5 translate-y-0.5 bg-zinc-200 transition-transform group-hover:translate-x-0 group-hover:translate-y-0"></span>
+                      <span class="analog-corners relative block border border-current bg-zinc-900 group-hover:bg-zinc-800 p-2 px-5 align-center"><p id="qualifications-title" class="h-min analog-font text-center">&gt;</p></span>
                     </a> 
                 </ul>
               </div>
               <div class="h-full grow-0">
                 <ul class="h-full">
                   <a class="w-max h-full group relative inline-block text-lg font-medium text-zinc-200 focus:outline-none focus:ring active:text-indigo-500" onclick="qualNext()">
-                      <span class="absolute h-full inset-0 translate-x-0.5 translate-y-0.5 bg-zinc-200 transition-transform group-hover:translate-x-0 group-hover:translate-y-0"></span>
-                      <span class="relative h-full w-full block border border-current bg-zinc-900 group-hover:bg-zinc-800 p-2 px-5 align-center"><p class="h-min analog-font text-center">&gt;</p></span>
+                      <span class="analog-corners absolute h-full inset-0 translate-x-0.5 translate-y-0.5 bg-zinc-200 transition-transform group-hover:translate-x-0 group-hover:translate-y-0"></span>
+                      <span class="analog-corners relative h-full w-full block border border-current bg-zinc-900 group-hover:bg-zinc-800 p-2 px-5 align-center"><p class="h-min analog-font text-center">&gt;</p></span>
                     </a> 
                 </ul>
               </div>
@@ -153,14 +153,14 @@
         <div class="snap-center max-h-dvh overflow-x-clip">
 
           <div class="pt-2 pb-0 sm:pt-8 sm:pb-2">
-          <h1 class="text-4xl h-12">> More</h1>
+          <h1 class="text-4xl h-12 header-font">> More</h1>
             <p class="align-left analog-font text-lg">Links</p>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 grid-flow-col gap-y-4 sm:gap-y-1 gap-x-4 pb-4">
               <div>
                 <ul>
                   <a class="w-full group relative inline-block text-lg font-medium text-zinc-200 focus:outline-none focus:ring active:text-indigo-500" target=”_blank” href="https://www.linkedin.com/in/rexkaeser">
-                      <span class="absolute inset-0 translate-x-0.5 translate-y-0.5 bg-zinc-200 transition-transform group-hover:translate-x-0 group-hover:translate-y-0"></span>
-                      <span class="relative w-full block border border-current bg-zinc-900 group-hover:bg-zinc-800 p-2 px-5 align-center"><p class="analog-font">LinkedIn</p></span>
+                      <span class="analog-corners absolute inset-0 translate-x-0.5 translate-y-0.5 bg-zinc-200 transition-transform group-hover:translate-x-0 group-hover:translate-y-0"></span>
+                      <span class="analog-corners relative w-full block border border-current bg-zinc-900 group-hover:bg-zinc-800 p-2 px-5 align-center"><p class="analog-font">LinkedIn</p></span>
                     </a>
                 </ul>
               </div>
