--- a/public/html/timelines/cmc.html
+++ b/public/html/timelines/cmc.html
@@ -1,6 +1,6 @@
 <div class="px-24 flex overflow-x-scroll overflow-y-clip horizontal-scroll-fade max-w-full h-full">
 
-    <div class="sm:ml-4 lg:ml-12 flex-shrink-0 flex-grow-0 w-full h-full sm:w-96 pb-4">
+    <div class="sm:ml-4 lg:ml-12 flex-shrink-0 flex-grow-0 w-semesterStack h-full pb-4">
         <div class="mx-4 flex flex-col h-full pt-4 pb-12 sm:pt-4  max-h-full items-center justify-center analog-box-green analog-green">
             <div class="w-full mt-2">
                 <!--Top Title-->
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <div class="flex-shrink-0 flex-grow-0 w-full h-full sm:w-96 pb-4">
+    <div class="flex-shrink-0 flex-grow-0 w-semesterStack h-full pb-4">
         <div class="mx-4 flex flex-col h-full pt-4 pb-12 sm:pt-4  max-h-full items-center justify-center analog-box-green analog-green">
             <div class="w-full mt-2">
                 <!--Top Title-->
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <div class="flex-shrink-0 flex-grow-0 w-full h-full sm:w-96 pb-4">
+    <div class="flex-shrink-0 flex-grow-0 w-semesterStack h-full pb-4">
         <div class="mx-4 flex flex-col h-full pt-4 pb-12 sm:pt-4  max-h-full items-center justify-center analog-box-green analog-green">
             <div class="w-full mt-2">
                 <!--Top Title-->
@@ -68,7 +68,7 @@
         </div>
     </div>
 
-    <div class="sm:mr-4 lg:mr-12 flex-shrink-0 flex-grow-0 w-full h-full sm:w-96 pb-4">
+    <div class="sm:mr-4 lg:mr-12 flex-shrink-0 flex-grow-0 w-semesterStack h-full pb-4">
         <div class="mx-4 flex flex-col h-full pt-4 pb-12 sm:pt-4  max-h-full items-center justify-center analog-box-green analog-green">
             <div class="w-full mt-2">
                 <!--Top Title-->
