--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 <body style="font-family: 'Barlow', sans-serif" class="bg-gradient-to-r from-slate-900 via-gray-800 to-zinc-900 bg-slate-900 text-white">
   
 
-  <div class="flex justify-center
-  snap-y scroll-auto snap-mandatory snap-always overflow-y-scroll no-scrollbar">
+  <div class="flex justify-center snap-y scroll-auto snap-mandatory snap-always overflow-y-scroll no-scrollbar">
     <div class="h-dvh mx-5 w-full xl:w-2/3  2xl:w-1/2 items-left place-content-center flex justify-center inline-block align-middle flex-col text-3xl text-gray-200">
       <div class="max-h-dvh ">
         <div class="snap-center max-h-dvh overflow-y-scroll overflow-x-clip no-scrollbar">
