--- a/public/html/qualifications/experience.html
+++ b/public/html/qualifications/experience.html
@@ -1,3 +1,30 @@
+<div class="w-full m-4 my-2 mx-auto bg-white shadow-lg rounded-lg overflow-hidden analog-box analog-blue">
+  <div class="flex flex-col sm:flex-row">
+    <div class="flex-auto px-6 py-4">
+      <h2 class="text-xl font-bold mb-2">Hardware Mechanical Interface</h2>
+      <p class="text-gray-200 text-base w-max">MEGN 200</p>
+      <p class="text-gray-200 text-base w-max">Lidar Controlled Alarm Clock</p>
+      <p class="text-blue-500 text-base w-max ">Duration: Fall 2024</p>
+
+      <a class="w-full mt-2 sm:mb-0 group relative inline-block text-lg font-medium text-zinc-200 focus:outline-none focus:ring active:text-indigo-500" onclick="setPopup('megn200_lidar_alarm')">
+        <span class="absolute inset-0 translate-x-0.5 translate-y-0.5 bg-zinc-200 transition-transform group-hover:translate-x-0 group-hover:translate-y-0"></span>
+        <span class="relative w-full block border border-current bg-zinc-900 group-hover:bg-zinc-800 p-2 px-5 align-center"><p class="analog-font">More</p></span>
+      </a>
+       
+    </div>
+    <div class="m-4 flex-auto analog-grey analog-box">
+      <p class="align-left analog-font text-lg text-red-100">•	Using SolidWorks to design physical parts.
+        </p>
+        <p class="align-left analog-font text-lg text-red-100">•	Wiring a Dual Voltage system for powering and driving the robot
+          </p>
+          <p class="align-left analog-font text-lg text-red-100">•	Setup and integrating sensors, motors, and display interfaces
+            </p>
+            <p class="align-left analog-font text-lg text-red-100">•	Programming and testing AI controller for driving and making decisions.
+            </p>
+            
+    </div>
+  </div>
+</div>
 <div class="w-full m-4 my-2 mx-auto bg-white shadow-lg rounded-lg overflow-hidden analog-box analog-green">
   <div class="flex flex-col sm:flex-row">
     <div class="flex-auto px-6 py-4">
