--- a/public/html/qualifications/skills.html
+++ b/public/html/qualifications/skills.html
@@ -28,7 +28,21 @@
   <div>
     <ul>
       <div class="analog-box analog-green text-gray-600">
+        <p class="align-left analog-font text-lg text-blue-100">EES: Engineering Equation Solver</p>
+      </div>
+    </ul>
+  </div>
+  <div>
+    <ul>
+      <div class="analog-box analog-green text-gray-600">
         <p class="align-left analog-font text-lg text-blue-100">SolidWorks</p>
+      </div>
+    </ul>
+  </div>
+  <div>
+    <ul>
+      <div class="analog-box analog-green text-gray-600">
+        <p class="align-left analog-font text-lg text-blue-100">Finite Element Analysis</p>
       </div>
     </ul>
   </div>
