--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </a>
           <div class="pt-6 pb-0 sm:pt-8 sm:pb-2">
           <h1 class="text-4xl h-12 header-font">> About Me</h1>
-            <div class="grid grid-cols-1 grid-rows-3 sm:grid-cols-3 sm:grid-rows-1 grid-flow-col gap-y-1 gap-x-4 pb-4">
+            <div class="grid grid-cols-1 grid-rows-3 lg:grid-cols-3 lg:grid-rows-1 grid-flow-col gap-y-1 gap-x-4 pb-4">
               <div>
                 <ul>
                   <p class="align-left analog-font text-lg">Phone Number</p>
@@ -81,7 +81,7 @@
                 <ul>
                   <p class="align-left analog-font text-lg">Location</p>
                   <div class="analog-box analog-blue text-gray-600">
-                    <p class="align-left analog-font text-lg text-blue-100">Golden, Colorado</p>
+                    <p class="align-left analog-font text-lg text-blue-100">Golden, Colorado, United States</p>
                   </div>
                 </ul>
               </div>
