Added Lab VIEW Skills

--- a/public/html/qualifications/skills.html
+++ b/public/html/qualifications/skills.html
@@ -35,6 +35,13 @@
   <div>
     <ul>
       <div class="analog-box analog-green text-gray-600">
+        <p class="align-left analog-font text-lg text-blue-100">Lab VIEW</p>
+      </div>
+    </ul>
+  </div>
+  <div>
+    <ul>
+      <div class="analog-box analog-green text-gray-600">
         <p class="align-left analog-font text-lg text-blue-100">SolidWorks</p>
       </div>
     </ul>
