Changed popups and qualifications screens
Popups are now queried, the query can still be copied with the URL, and now the qualifications screens are in the hashes, so it can now be sent with a specific screen and specific popup

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    
+    <meta name="description" content="
+    Rex Kaeser – Mechanical Engineering student at Colorado School of Mines. Browse projects, CAD/FEA experience, and resume. Open to mechanical design or manufacturing internships for Summer 2025.
+    ">
 
     <!-- Change the description wrt project -->
     <meta
@@ -91,7 +93,7 @@
             <ul>
                 <p class="align-left analog-font text-lg">Objective</p>
                 <div id="console" class="analog-box analog-grey  text-gray-600">
-                  <p class="align-left analog-font text-lg text-red-100">I am eager to secure a challenging internship in the field of engineering, with the sincere belief that this experience will not only accelerate my personal growth and industry-related skills but also, in turn, contribute positively to the company's success and profitability..</p>
+                  <p class="align-left analog-font text-lg text-red-100">I am eager to secure a challenging internship in the field of engineering, with the sincere belief that this experience will not only accelerate my personal growth and industry-related skills but also, in turn, contribute positively to the company's success and profitability.</p>
               </div>
             </ul>
             <div class="my-3"></div>
