--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="description" content="
-    Rex Kaeser – Mechanical Engineering student at Colorado School of Mines. Browse projects, CAD/FEA experience, and resume. Open to mechanical design or manufacturing internships for Summer 2025.
+    Rex Kaeser – Mechanical Engineering student at Colorado School of Mines. Browse projects, CAD/FEA experience, and resume. Working at Western Digital as a Hardware Development Engineering Intern for Summer 2025.
     ">
 
     <!-- Change the description wrt project -->
