Updated current classes and skills relaated sections
Updated timelines to current and updated skills, certs, and intrests section to use data files and load them,

--- a/public/html/qualifications/certandawards.html
+++ b/public/html/qualifications/certandawards.html
@@ -1,22 +1,1 @@
-<div>
-  <ul>
-    <p class="align-left analog-font text-lg">SolidWorks</p>
-    <div class="analog-box analog-green text-gray-600">
-      <p class="align-left analog-font text-lg ctext-blue-100">CSWP Mechanical Design</p>
-    </div>
-    <div class="mt-2 analog-box analog-blue text-gray-600">
-      <p class="align-left analog-font text-lg ctext-blue-100">CSWP Mechanical Design</p>
-    </div>
-  </ul>
-</div>
-<div>
-  <ul>
-    <p class="align-left analog-font text-lg">Colorado Technology Student Association</p>
-    <div class="analog-box analog-green text-gray-600">
-      <p class="align-left analog-font text-lg ctext-blue-100">1st Place Problem Solving</p>
-    </div>
-    <div class="mt-2 analog-box analog-yellow text-gray-600">
-      <p class="align-left analog-font text-lg ctext-blue-100">2nd Place Coding</p>
-    </div>
-  </ul>
-</div>
+<script src="/public/js/tagsConverter.js" data-file="/public/dats/certandawards.txt"></script>
