--- a/mc/index.html
+++ b/mc/index.html
@@ -63,29 +63,30 @@
   <div class="flex h-screen justify-center">
     <div class="mx-5 w-full max-w-xl items-left place-content-center flex justify-center inline-block align-middle flex-col text-3xl text-gray-200">
       <div class="size-fix">
-        <p class="text-4xl analog-font h-12">MC.REXKAESER.COM</p>
+        <p class="text-4xl analog-font h-12">LIMINAL INDUSTRIES</p>
         <ul>
-          <p class="align-left analog-font text-lg">Server Name</p>
+          <p class="align-left analog-font text-lg">Server Address</p>
           <div class="analog-box analog-green text-gray-600 flex" >
-              <p   class="bg-transparent text-lg focus:outline-none text-gray-400">Weep</p>
+              <p   class="bg-transparent text-lg focus:outline-none text-gray-400">LIMINAL.MC.REXKAESER.COM</p>
           </div>
         </ul>
         <ul>
           <p class="align-left analog-font text-lg">Server Version</p>
           <div class="analog-box analog-green text-gray-600 flex" >
-            <p class="bg-transparent text-lg focus:outline-none text-gray-400">FORGE 1.7.10</p>
+            <p class="bg-transparent text-lg focus:outline-none text-gray-400">FORGE 1.20.1</p>
           </div>
         </ul>
         <div class="my-3"></div>
         <ul>
           <p class="align-left analog-font text-lg text-gray-400">Server Status ...</p>
           <div class="analog-box analog-grey  text-gray-600">
-              <p class="align-left analog-font text-lg server-status" serverIP="mc.rexkaeser.com">SERVER STATUS TEXT</p>
+              <p class="align-left analog-font text-lg server-status" serverIP="liminal.mc.rexkaeser.com">SERVER STATUS TEXT</p>
           </div>
           <div class="my-2 analog-box analog-grey  text-gray-600">
-              <p class="align-left analog-font text-lg server-players" serverIP="mc.rexkaeser.com">SERVER PLAYERS TEXT</p>
+              <p class="align-left analog-font text-lg server-players" serverIP="liminal.mc.rexkaeser.com">SERVER PLAYERS TEXT</p>
           </div>
         </ul>
+        <!--
         <div class="my-3"></div>
         <ul>
           <p class="align-left analog-font text-lg">Download Modpack</p>
@@ -97,6 +98,7 @@
             <span class="relative w-full block border border-current bg-zinc-900 group-hover:bg-zinc-800 p-2 px-5 align-center"><p class="download-btn-text analog-font no-select">DOWNLOAD BUTTON TEXT</p></span>
           </a>
         </ul>
+        -->
       </div>
     </div>
   </div>
