--- a/public/html/timelines/mines.html
+++ b/public/html/timelines/mines.html
@@ -60,8 +60,8 @@
                     <!--Class List Starts Here-->
 
                     <script src="/public/js/classTile.js" title="EENG 281" description="Electrical Circuits and Electronics" grade="B"></script>
-                    <script src="/public/js/classTile.js" title="MATH 307" description="Program and Hardware Interface" grade="A-"></script>
-                    <script src="/public/js/classTile.js" title="MEGN 200" description="Differential Equations" grade="C+"></script>
+                    <script src="/public/js/classTile.js" title="MATH 307" description="Computer Aided Math" grade="A-"></script>
+                    <script src="/public/js/classTile.js" title="MEGN 200" description="Program and Hardware Interface" grade="C+"></script>
                     <script src="/public/js/classTile.js" title="MEGN 212" description="Solid Mechanics" grade="A"></script>
                     <script src="/public/js/classTile.js" title="MTGN 202" description="Engineered Materials" grade="A-"></script>
 
